--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="pausas">
                 <button class="btn" onclick="pausa10()">Pausa 10</button>
                 <button class="btn" onclick="pausa20()">Pausa 20</button>
-                <button class="btn" onclick="cronoP()">Personalizado</button>
+                <button class="btn" onclick="cronoP()">Iniciar</button>
                 <button class="btn" onclick="zerar()">Zerar</button>
             </div>
         </div>
